--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 ###< symfony/phpunit-bridge ###
 # node modules
 node_modules
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
